FIX: various emoji-picker positioning issues (#1227)
- enabling selecting messages was broken due to emoji-picker-anchor breaking the flow
- the anchor was sometimes too far from msg-actions making it impossible to reach without closing it

--- a/assets/stylesheets/common/chat-message.scss
+++ b/assets/stylesheets/common/chat-message.scss
@@ -14,6 +14,10 @@
   }
 }
 
+.emoji-picker-anchor {
+  position: absolute;
+}
+
 @mixin chat-reaction {
   align-items: center;
   display: inline-flex;
